refactor types & models
